style: remove z-index to avoid overlapping

--- a/src/components/Skeleton/Skeleton.module.css
+++ b/src/components/Skeleton/Skeleton.module.css
@@ -96,11 +96,10 @@
 .skeleton::before {
     border-radius: 12px;
     opacity: 0.5;
-    z-index: 10;
 }
+
 .skeleton-paragraph::before {
     border-radius: 30px;
-    z-index: 20;
 }
 
 .skeleton-description.skeleton-row {
